--- a/styles/myspooner.less
+++ b/styles/myspooner.less
@@ -105,21 +105,13 @@ div.error {
 	.rounded;
 }
 
-.errorText {
-	color: @pink;
+#notice {
+	color: @green;
+	margin: 0 0 1em 0;
 }
 
-div.notice {
-	text-align: center;
-	position: relative;
-	top: 5px;
-	padding: 10px 10px;
-	margin: 0px auto;
-	margin-bottom: 20px;
-	width: 400px;
-	border: 1px solid @yellow;
-	z-index: 40;
-	.rounded;
+.errorText {
+	color: @pink !important;
 }
 
 footer {
