--- a/styles/myspooner.less
+++ b/styles/myspooner.less
@@ -105,9 +105,9 @@ div.error {
 	.rounded;
 }
 
-#notice {
+#notice, .notice {
 	color: @green;
-	margin: 0 0 1em 0;
+	margin: 0 0.2em 0 0;
 }
 
 .errorText {
@@ -182,4 +182,8 @@ body {
 	
 .addNew:hover {
 	background-position: -22px -50px;
+}
+
+.grey {
+	color: @grey !important;
 }
