--- a/styles/myspooner.less
+++ b/styles/myspooner.less
@@ -44,6 +44,7 @@ h1, h2, h3, h4 {
 h2 {
 	font-size: 2em;
 	text-align: left;
+	margin-bottom: .2em;
 }
 
 form.main {
@@ -110,8 +111,12 @@ div.error {
 	margin: 0 0.2em 0 0;
 }
 
-.errorText {
+.errorText, .pinkText {
 	color: @pink !important;
+}
+
+.greenText {
+	color: @green !important;
 }
 
 footer {
