--- a/styles/myspooner.less
+++ b/styles/myspooner.less
@@ -115,6 +115,10 @@ div.error {
 	color: @pink !important;
 }
 
+.greyText {
+	color: @grey !important;
+}
+
 .greenText {
 	color: @green !important;
 }
