--- a/styles/myspooner.less
+++ b/styles/myspooner.less
@@ -181,8 +181,13 @@ body {
 	min-height: 500px;
 }	
 
+.button_container {
+	 margin-top:-2em; 
+	 float:right;
+}
+
 .addNew {
-	margin: 0em 1.5em 0 0;
+	margin: 0 0 0 0;
 	background: transparent url("../images/icons_module.png") no-repeat 0 0;
 	display: inline-block;
 	height: 16px;
