spooner trip tags working

--- a/styles/interior-2.less
+++ b/styles/interior-2.less
@@ -62,16 +62,16 @@ fieldset#front {
 	clear: both;
 }
 
-span.checkboxes, span.validation {
+span.checkboxes, span.validation, span.trip_notification {
 	float: right;
 	}
 	
-.messageMarked, .notificationMarked, .validationMarked {
+.messageMarked, .notificationMarked, .validationMarked, .tripMarked {
 	float: right;
 	color: @grey;
 }
 
-.message, .notification, .validation{
+.message, .notification, .validation, .trip_notification {
 	margin: .5em 0 .5em 0;
 	clear: both;
 	.clickable;
