--- a/styles/interior.less
+++ b/styles/interior.less
@@ -59,6 +59,10 @@
 	text-decoration:underline;
 }
 
+div#articles > *:last-child, div#posts > *:last-child {
+	border-bottom: thin solid #eee;
+}
+
 div#articles > *:nth-child(odd), div#posts > *:nth-child(odd) {
 	background: #FAFAFA;
 	
