--- a/styles/myspooner.less
+++ b/styles/myspooner.less
@@ -51,6 +51,7 @@ h2 {
 	font-size: 2em;
 	text-align: left;
 	margin-bottom: .2em;
+	.text-shadow;
 }
 
 form.main {
@@ -251,5 +252,6 @@ body {
 }
 
 .user:hover {
+	.text-shadow;
 	text-decoration:underline;
 }
