more functional calendar and better username functions

--- a/styles/fullcalendar.css
+++ b/styles/fullcalendar.css
@@ -128,7 +128,7 @@ html .fc,
 	}
 	
 .fc-state-highlight { /* <td> today cell */ /* TODO: add .fc-today to <th> */
-	background: #ffc;
+	background: #F1FD72;
 	}
 	
 .fc-cell-overlay { /* semi-transparent rectangle while dragging */
