starting new event page

--- a/styles/fullcalendar.print.css
+++ b/styles/fullcalendar.print.css
@@ -17,6 +17,10 @@
  /* Events
 -----------------------------------------------------*/
  
+ header {
+ 	display: none !important;
+ }
+ 	
 .fc-event-skin {
 	background: none !important;
 	color: #000 !important;
