--- a/styles/fullcalendar.css
+++ b/styles/fullcalendar.css
@@ -8,7 +8,10 @@
  * Date: Sun Aug 21 22:06:09 2011 -0700
  *
  */
-
+.fc-first.fc-last {
+	background: #D8005F;
+	color: white;
+}
 
 .fc {
 	direction: ltr;
