setting page editing

--- a/styles/interior-2.less
+++ b/styles/interior-2.less
@@ -117,6 +117,8 @@ span.checkboxes, span.validation, span.trip_notification {
 
 .newTrip {
 	margin-top: 1em;
+	width: 100%;
+	clear:both;
 	.clickable;
 }
 
@@ -136,4 +138,8 @@ span.checkboxes, span.validation, span.trip_notification {
 
 .announcedTrip {
 	.bordered_post;
+}
+
+.editingThisTrip {
+	color: @green;
 }
