--- a/styles/interior.less
+++ b/styles/interior.less
@@ -128,7 +128,11 @@ div.article {
 	
 	textarea {
 		height: 12em;
-	}	
+	}
+	
+	.smaller {
+		width: 110px !important;
+	}
 }	
 
 #searchBlog {
@@ -148,6 +152,9 @@ div.article {
 		text-align: left;
 		width: 400px;
 		margin: 0px auto;
+		margin-top: 1em;
+		height: 120px;
+		overflow-y: scroll;
 		
 	span {
 		text-align: left;
