--- a/styles/myspooner.less
+++ b/styles/myspooner.less
@@ -30,6 +30,11 @@
 	box-shadow: 0 @depth @depth rgba(0, 0, 0, 0.4);
 }
 
+img.grav {
+	float: left;
+	margin:0 .4em .4em 0em;
+}
+
 div#container{ 
 	text-align:center;
 	width:800px; 
