made trips and events page

--- a/styles/interior-2.less
+++ b/styles/interior-2.less
@@ -54,9 +54,9 @@
 	 background:white;
 	 border:thin solid black;
 	 padding: .5em;
-		opacity:.8; /* FX/Opera/Safari/Chrome */
-		-ms-filter:"alpha(opacity=80)"; /* IE8 */
-		filter:alpha(opacity=80); /* IE6/IE7 */
+		opacity:.9; /* FX/Opera/Safari/Chrome */
+		-ms-filter:"alpha(opacity=90)"; /* IE8 */
+		filter:alpha(opacity=90); /* IE6/IE7 */
 	 .shadow;
 	 .rounded;
 	 
@@ -131,25 +131,17 @@ span.checkboxes, span.validation, span.trip_notification {
 	.bordered_post;
 }
 
-.newTrip {
-	margin-top: 1em;
-	width: 100%;
-	clear:both;
-	.clickable;
-}
-
-.newTrip:hover {
-	color:@pink;
-}
-
 #trips {
 	text-align: left;
 }
 
 .spoonerTrip {
 	float: left;
+	text-align: left;
 	margin: .4em 0 0 0;
 	width: 100%;
+	padding-top: .4em;
+	border-top: thin solid #FAFAFA;
 }
 
 .announcedTrip {
