better news feed formatting

--- a/styles/myspooner.less
+++ b/styles/myspooner.less
@@ -220,6 +220,10 @@ body {
 	.edit {
 		background-position: -22px -700px;
 	}
+	
+	.next {
+		background-position: -22px -350px;
+	}
 }
 
 .addNew {
@@ -273,6 +277,21 @@ body {
 	background-position: -22px -500px;
 }
 
+.next {
+	margin: 0 0 0 0;
+	background: transparent url("http://localhost:8888/styles/../images/icons_module.png") no-repeat 0 0;
+	display: inline-block;
+	height: 16px;
+	vertical-align: text-top;
+	width: 20px;
+	overflow: hidden;
+	background-position: 3px -350px;
+	cursor: pointer;
+}
+
+.next:hover {
+	background-position: -22px -350px;
+}
 
 .grey {
 	color: @grey !important;
