--- a/styles/interior-2.less
+++ b/styles/interior-2.less
@@ -141,7 +141,7 @@ span.checkboxes, span.validation, span.trip_notification {
 	margin: .4em 0 0 0;
 	width: 100%;
 	padding-top: .4em;
-	border-top: thin solid #FAFAFA;
+	border-top: thin solid #EEE;
 }
 
 .announcedTrip {
