no checkbox for current user id

--- a/styles/interior-2.less
+++ b/styles/interior-2.less
@@ -104,7 +104,7 @@ span.checkboxes, span.validation, span.trip_notification {
 .full_message {
 	margin: 1em 0em 1em 0em;
 	padding: .5em 1em;
-	background: #ddd;
+	background: #FAFAFA;
 	border: @darkgrey;
 	word-wrap: break-word;
 	width: 97%;
