search blog based on art title

--- a/styles/interior-2.less
+++ b/styles/interior-2.less
@@ -159,3 +159,17 @@ span.checkboxes, span.validation, span.trip_notification {
 .ui-timepicker-div dl dd { margin: 0 10px 10px 65px; }
 .ui-timepicker-div td { font-size: 90%; }
 .ui-tpicker-grid-label { background: none; border: none; margin: 0; padding: 0; }
+
+
+#search_container {
+	float:right;
+	margin: .4em 0em 1em 0em;
+
+	input[type="search"] {
+		width: 12em;
+	}
+	
+	#do_search {
+		vertical-align: baseline;
+	}
+}
