--- a/styles/myspooner.less
+++ b/styles/myspooner.less
@@ -37,9 +37,11 @@ img.grav {
 
 div#container{ 
 	text-align:center;
-	width:800px; 
+	width:900px; 
 	margin:0 auto; 
-	margin-bottom: 4em;
+	padding: 4em 2em;
+	background: white;
+	min-height: 800px;
 }
 
 h1, h2, h3, h4 {
@@ -189,11 +191,11 @@ header {
 }
 
 body {
-	margin-top: 7em;
 	width: 100%;
 	font: 11pt arial;
 	color: @dark;
 	min-height: 500px;
+	background: url('../images/white_plaster.png') repeat center;
 }	
 
 .button_container {
