--- a/styles/interior-2.less
+++ b/styles/interior-2.less
@@ -3,7 +3,7 @@
 @green: #00BB3F;
 @yellow: #F1FD72;
 @red: #8C003D;
-@lgreen: #74E8D5;
+@lgreen: #00C8D6;
 @grey: #bbb;
 @darkgrey: #333;
 
@@ -102,7 +102,6 @@ span.checkboxes, span.validation, span.trip_notification {
 }
 
 .full_message {
-	margin: 1em 0em 1em 0em;
 	padding: .5em 1em;
 	background: #FAFAFA;
 	border: @darkgrey;
@@ -111,7 +110,8 @@ span.checkboxes, span.validation, span.trip_notification {
 	.rounded(2px);
 
 	.subject {
-		color: @green;
+		border-bottom: thin solid #EEE;
+		padding-bottom: .4em;
 	}
 	
 	.content {
