--- a/styles/interior.less
+++ b/styles/interior.less
@@ -3,7 +3,7 @@
 @green: #00BB3F;
 @yellow: #F1FD72;
 @red: #8C003D;
-@lgreen: #74E8D5;
+@lgreen: #00C8D6;
 @grey: #bbb;
 @darkgrey: #333;
 
@@ -35,7 +35,7 @@
 }
 
 .text-shadow {
-	text-shadow: 2px 2px 1px #333;
+	text-shadow: 0px 1px 1px #bbb;
 }
 
 .shadow(@depth:4px) {
