fixed blue/green text

--- a/styles/interior.less
+++ b/styles/interior.less
@@ -1,4 +1,4 @@
-@font: 'Lancelot';
+@font: 'Open Sans Condensed';
 @pink: #D8005F;
 @green: #00BB3F;
 @yellow: #F1FD72;
@@ -209,12 +209,12 @@ div.article {
 }
 
 .reply {
-	
 	margin: 1em 0 .2em 0;
 }	
 
 div.latest {
 	.bordered_post;
+	margin-top: 0;
 	
 	div {
 		float:left;
