--- a/styles/myspooner.less
+++ b/styles/myspooner.less
@@ -1,9 +1,9 @@
-@font: 'Lancelot';
+@font: 'Open Sans Condensed';
 @pink: #D8005F;
 @green: #00BB3F;
 @yellow: #F1FD72;
 @red: #8C003D;
-@lgreen: #74E8D5;
+@lgreen: #00C8D6;
 @grey: #c7c7c7;
 @dark: #333;
 
@@ -138,7 +138,7 @@ div.error {
 }
 
 .greenText {
-	color: @green !important;
+	color: @lgreen !important;
 }
 
 .darkText {
