--- a/styles/interior-2.less
+++ b/styles/interior-2.less
@@ -1,4 +1,4 @@
-@font: 'Lancelot';
+@font: 'Open Sans Condensed';
 @pink: #D8005F;
 @green: #00BB3F;
 @yellow: #F1FD72;
@@ -14,12 +14,6 @@
 	text-align: justify;
 	clear: both;
 	word-wrap: break-word;
-}
-
-.georgia {
-	font-family: georgia, times;
-	font-size: 1em;
-	font-weight: normal;
 }
 
 .clickable {
@@ -149,7 +143,7 @@ span.checkboxes, span.validation, span.trip_notification {
 }
 
 .editingThisTrip {
-	color: @green;
+	color: @lgreen;
 }
 
 /* css for timepicker */
