--- a/styles/interior.less
+++ b/styles/interior.less
@@ -160,19 +160,18 @@ div.article {
 
 .tagSelect {
 		text-align: left;
-		width: 400px;
+		width: 300px;
 		margin: 0px auto;
 		margin-top: 1em;
 		height: 120px;
 		overflow-y: scroll;
+		border: 1px #BBB solid;
+		padding: .2em .5em;
+		.rounded(4px);
 		
 	span {
 		text-align: left;
 		color: @pink;
-	}
-
-	div {
-		margin-left: 170px;
 	}
 }
 
