--- a/styles/interior-2.less
+++ b/styles/interior-2.less
@@ -45,8 +45,8 @@
 	 z-index:50000;
 	 min-height:120px;
 	 width:260px;
-	 background:white;
-	 border:thin solid black;
+	 background:@yellow;
+	 border:medium solid black;
 	 padding: .5em;
 		opacity:.9; /* FX/Opera/Safari/Chrome */
 		-ms-filter:"alpha(opacity=90)"; /* IE8 */
