--- a/styles/myspooner.less
+++ b/styles/myspooner.less
@@ -327,6 +327,10 @@ body {
 	font-weight:bold;
 }
 
-.user:hover {
+.goto_trips, .goto_blog {
+	.clickable;
+}
+
+.user:hover, .goto_trips:hover, .goto_blog:hover {
 	text-decoration:underline;
 }
