click to read and click to close

--- a/styles/interior-2.less
+++ b/styles/interior-2.less
@@ -96,6 +96,7 @@ span.checkboxes, span.validation, span.trip_notification {
 }
 
 .full_message {
+	margin: .4em 0 0 0;
 	padding: .5em 1em;
 	background: #FAFAFA;
 	border: @darkgrey;
