--- a/styles/myspooner.less
+++ b/styles/myspooner.less
@@ -207,7 +207,7 @@ body {
 	margin: -.3em 0 0 0;	
 }
 
-.button_container:hover {
+.button_container:hover, .preview:hover {
 	color: @pink;
 	
 	.addNew {
